# geospatial-agent

./: .gitignore  Dockerfile  LICENSE  README.md  pyproject.toml  requirements.txt  setup_project.py  test_agent.py
.streamlit/: config.toml
backend/genai/agent/: tool_search.py
backend/genai/prompts/: cot_templates.txt
backend/genai/tools/: clip.py  tool_generator.py
data/: ontology.yaml
data/static/: mock_obs.geojson  mock_pred.geojson
data/tool_outputs/: clipped_dem.tif  my_aoi.dbf  my_aoi.shp  my_aoi.shx  my_dem.tif
mock_data/: mock_flood_observed.geojson  mock_flood_predicted.geojson  mock_landcover.geojson  mock_study_area.geojson
src/geospatial_agent/: __init__.py
src/geospatial_agent/application/agents/: __init__.py  planner.py  planner_agent.py
src/geospatial_agent/data_ingestion/: data_loader.py
src/geospatial_agent/domain/: models.py  schemas.py
src/geospatial_agent/infrastructure/: config.py
src/geospatial_agent/infrastructure/gis_backends/gdal_ops/: calculate_pixel_statistics.py  clip_raster.py  convert_vector_format.py  read_raster_metadata.py  read_shapefile.py  reproject_raster.py
src/geospatial_agent/infrastructure/llm_clients/: openai_client.py
src/geospatial_agent/infrastructure/rag/: ontology.py
src/geospatial_agent/infrastructure/tools/: gdal_tools.py
src/geospatial_agent/interface/streamlit_app/: main.py
src/geospatial_agent/ontology/: ontology.py
src/geospatial_agent/tool_manager/: tool_manager.py  tool_registry.py
tests/: docker_healthcheck.py  test_planner.py
(+6 files in other folders)
