[tool.poetry]
name = "geospatial-agent"
version = "0.1.0"
description = "A GenAI agent for professional-grade geospatial analysis."
authors = ["Rama Pranav", "Sanjana", "Tejsai", "Twinkle"]
readme = "README.md"
packages = [{include = "geospatial_agent", from = "src"}]

[tool.poetry.dependencies]
python = "~3.10"

geopandas = "0.14.3"
rasterio = "1.3.10"
shapely = "2.0.4"
openai = ">=1.12.0"
langchain = "0.2.1"
langgraph = "0.0.57"
python-dotenv = "1.0.1"
pyyaml = "6.0.1"
rich = "13.7.1"

[tool.poetry.group.dev.dependencies]
pytest = "8.2.1"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"


# pyproject.toml
[tool.poetry.dependencies]
python = "^3.10"
openai = "^1.12.0"
PyYAML = "^6.0.1"